Closed Bug 512908 Opened 16 years ago Closed 16 years ago

Don't expose empty live attribute if there is no aria-live and ARIA role hasn't default live value

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- beta1-fixed

People

(Reporter: surkov, Assigned: surkov)

References

(Blocks 1 open bug)

Details

(Keywords: access, regression, verified1.9.2)

Attachments

(1 file)

Attached patch patchSplinter Review
Don't expose empty live attribute if there is no aria-live and ARIA role hasn't default live value
Attachment #396972 - Flags: review?(marco.zehe)
Attachment #396972 - Flags: review?(bolterbugz)
Comment on attachment 396972 [details] [diff] [review] patch Thanks! r=me
Attachment #396972 - Flags: review?(marco.zehe) → review+
Comment on attachment 396972 [details] [diff] [review] patch Oops, forgot tow nits: >+ // Check if all obtained attributes are expected and has expected value. "... and have expected value" >+ // Check if all unexpected attribute are absent. "Check if all unexpected attributes are absent", attributes must be plural here.
thanks, fixed locally
Attachment #396972 - Flags: review?(bolterbugz) → review+
Blocks: 463645
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Flags: in-testsuite+
Keywords: regression
Resolution: --- → FIXED
Attachment #396972 - Flags: approval1.9.2?
Attachment #396972 - Flags: approval1.9.2? → approval1.9.2+
Verified fixed in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2b1pre) Gecko/20090922 Namoroka/3.6b1pre (.NET CLR 3.5.30729)
Keywords: verified1.9.2
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: