Bug 512908 - Don't expose empty live attribute if there is no aria-live and ARIA role hasn't default live value, r=marcoz, davidb